--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,4 +1,5 @@
 body {
+    background-color: #eeeeee;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0px;
 }
@@ -9,41 +10,68 @@ body {
 }
 
 form {
-    background-color: #dbd5d5;
-    width: 30%;
-    height: 250px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* background-color: #ffffff; */
+    /* width: 40%; */
+    /* height: 325px; */
+    /* margin: 20px auto; */
+    /* padding: 25px; */
+    /* border-radius: 4px; */
+}
+
+.register-container {
+    background-color: #ffffff;
+    box-shadow: 2px 2px 10px #88888888;
+    width: 40%;
+    height: 325px;
     margin: 20px auto;
     padding: 25px;
-    border-radius: 2px;
+    border-radius: 4px;
 }
 
 input {
+    font-family: 'Josefin Sans', sans-serif;
+    margin-top: 30px;
+    height: 25px;
+    width: 200px;
+    text-align: center;
     margin: 5px;
     margin-bottom: 10px;
+    
 }
 
 .log-in, .log-out, .register {
-  background-color: #00acb0;
-  border-radius: 4px;
-  color: #f8f8f8;
-  min-height: 50px;
-  min-width: 100px;
-  outline:0;
-  cursor: pointer;
+    margin-top: 15px;
+    font-size: 13px;
+    background-color: #f29475;
+    border-radius: 4px;
+    color: #f8f8f8;
+    min-height: 40px;
+    min-width: 75px;
+    outline: 0;
+    cursor: pointer;
 }
 
 .log-in:hover, .log-out:hover, .register:hover {
-  background-color: #008183;
+    background-color: #c28b75;
 }
 
 /* This line makes the "Register" and "Login" buttons look like links */
+
 .link-button {
-    background:none;
-    color:inherit;
-    border:none;
-    padding:0;
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
     font: inherit;
-    outline:0;
-    border-bottom:1px solid #444; 
+    outline: 0;
+    border-bottom: 1px solid #444;
     cursor: pointer;
+}
+
+h1 {
+    font-family: 'Montserrat', sans-serif;
+    color: #583045;
 }
