--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -4,6 +4,14 @@ body {
     margin: 0px;
 }
 
+h3, h2 {
+    color: #583045
+}
+
+p {
+    color: #414141
+}
+
 .alert {
     background-color: #ff4545;
     margin: 50px;
@@ -39,7 +47,6 @@ input {
     text-align: center;
     margin: 5px;
     margin-bottom: 10px;
-    
 }
 
 .log-in, .log-out, .register {
@@ -74,4 +81,109 @@ input {
 h1 {
     font-family: 'Montserrat', sans-serif;
     color: #583045;
+}
+
+.profile-photo {
+    border: 1px solid #f29475;
+    border-radius: 100px;
+    background-color: #f29475;
+    max-width: 130px;
+    max-height: 130px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-left: 20px;
+}
+
+.profile-photo-text {
+    color: white;
+    text-align: center;
+    padding: 30px;
+}
+
+.profile-name-email-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    align-items: flex-start;
+    padding-left: 20px;
+    margin-top: 10px;
+}
+
+.profile-email {
+    margin-top: -30px;
+}
+
+.profile-header-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    padding-top: 20px;
+}
+
+.profile-bio-container {
+    margin-left: 70px;
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    padding-top: 0px;
+    max-width: 30%;
+    border-bottom: solid #f29475 2px;
+}
+
+.profile-bio {
+    max-width: 400px;
+    margin-top: -10px;
+}
+
+.profile-info-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.profile-info-copy {
+    max-width: 45%;
+}
+
+.profile-info-copy-sections {
+    border-bottom: solid #f29475 2px;
+}
+
+.profile-container {
+    background-color: #ffffff;
+    box-shadow: 2px 2px 10px #88888888;
+    width: 90%;
+    margin: 20px auto;
+    padding: 10px;
+    border-radius: 4px;
+}
+.profile-view-connected-button {
+    background-color: #f29475;
+    width: 80px;
+    height: 30px;
+    border-radius: 4px;
+    font-size: 13px;
+    color: #f8f8f8;
+    box-shadow: 2px 2px 10px #88888848;
+    font-family: 'Josefin Sans', sans-serif;
+    padding-top: 4px;
+    outline: none;
+    border: none;
+    cursor: pointer;
+}
+
+.profile-connected-summary-container {
+    background-color: #ffffff;
+    box-shadow: 2px 2px 10px #88888848;
+    border-radius: 4px;
+    border: solid 1.5px #f29475;
+    position: absolute;
+    right: 8%;
+    top: 20%;
+    max-width: 25%;
+    padding: 15px;
+    text-align: center;
 }
