--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,6 +1,7 @@
 .nav-title {
-    font-size: 24px;
-    font-weight: 700;
+    margin-top: 6px;
+    height: 80px;
+    width: 320px;
     display: inline-block;
     color: #f2f2f2;
     padding-left: 10px;
@@ -12,11 +13,10 @@
 }
 
 .nav-link {
-  float: left;
+  display:inline-block;
   color: #f2f2f2;
-  background-color: #f29475;
   text-align: center;
-  padding: 24px 10px;
+  padding: 16px 16px;
   text-decoration: none;
   font-size: 15px;
 
@@ -28,9 +28,11 @@
 }
 
 .nav-link:hover {
-  background-color: #008183;
+  background-color: #f29475;
 }
 
 .nav-right {
-  float: right;
+  width: 100%;
+  background-color: #c28b75;
+  text-align: right;
 }
