--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -176,6 +176,20 @@ h1 {
     border: none;
     cursor: pointer;
 }
+.profile-edit-cancel-button {
+    background-color: #9e6767;
+    width: 80px;
+    height: 30px;
+    border-radius: 4px;
+    font-size: 13px;
+    color: #f8f8f8;
+    box-shadow: 2px 2px 10px #88888848;
+    font-family: 'Josefin Sans', sans-serif;
+    padding-top: 4px;
+    outline: none;
+    border: none;
+    cursor: pointer;
+}
 
 .profile-connected-summary-container {
     background-color: #ffffff;
@@ -197,9 +211,4 @@ h1 {
 }
 .profile-edit-button-placement {
     margin-left: 10px;
-}
-.profile-blur {
-    height:100%;
-    width: 100%;
-    background-color: black
 }
