--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -210,6 +210,7 @@ h1 {
 }
 .underline {
   border-bottom: solid #f29475 1px;
+  /* text-align: center; */
 }
 
 .profile-connected-count-container {
@@ -362,4 +363,11 @@ h1 {
 
 tr, td {
     padding: 10px;
+}
+
+.activity-connected-status-modal {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
 }
