--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -9,6 +9,9 @@ h4, h3, h2 {
     color: #583045;
     font-family: 'Josefin Sans', sans-serif;
 }
+li {
+    list-style: none;
+}
 
 p {
     font-family: 'Tahoma', sans-serif;
@@ -385,4 +388,20 @@ tr, td {
     display: flex;
     flex-direction: column;
     text-align: center;
+}
+
+.search-field {
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 14px;
+    height: 35px;
+    width: 300px;
+    text-align: center;
+    outline: none;
+}
+
+.search-avatar {
+    width: 125px;
+    height: 125px;
+    object-fit: cover;
+    border-radius: 50%;
 }
