--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -428,8 +428,25 @@ tr, td {
     align-items: center;
 }
 
+.search-page-background {
+    background-color: #ffffff;
+    box-shadow: 2px 2px 10px #88888888;
+    width: 90%;
+    margin: 20px auto;
+    padding: 10px;
+    border-radius: 4px;
+    margin-top: 45px;
+}
+
+.search-head-row {
+    border-bottom: solid #f29475 1.5px;
+    padding-bottom: 16px;
+    width: 200px;
+}
+
 td {
     max-width: 350px;
+    padding: 12px;
 }
 
 
