--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -51,6 +51,29 @@ form {
     border-radius: 4px;
 }
 
+.login-buttons-container {
+    margin-top: 15px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content:  center;
+}
+
+.login-container {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content:  center;
+    background-color: #ffffff;
+    box-shadow: 2px 2px 10px #88888888;
+    width: 40%;
+    height: 425px;
+    margin: 20px auto;
+    padding: 25px;
+    border-radius: 4px;
+   
+}
+
 .invalid-password {
     color: red;
 }
@@ -69,7 +92,7 @@ input {
     margin-bottom: 10px;
 }
 
-.log-in, .log-out, .register {
+.log-in, .log-out, .register, .forgot-password {
     margin-top: 15px;
     font-size: 13px;
     background-color: #f29475;
@@ -466,6 +489,8 @@ td {
     text-align: center;
 
 }
+
+
 
 
 
