--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,3 +1,13 @@
+.about-container {
+    background-color: #ffffff;
+    box-shadow: 2px 2px 10px #88888888;
+    width: 90%;
+    margin: 20px auto;
+    padding: 10px;
+    border-radius: 4px;
+    margin-top: 45px;
+}
+
 body {
     background-color: #eeeeee;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
