--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,11 +1,99 @@
 .about-container {
     background-color: #ffffff;
     box-shadow: 2px 2px 10px #88888888;
-    width: 90%;
+    width: 88%;
     margin: 20px auto;
-    padding: 10px;
+    padding: 50px;
     border-radius: 4px;
     margin-top: 45px;
+}
+
+.about-heading-image {
+    margin-top: -50px;
+    width: 100%;
+    object-fit: cover;
+}
+
+.about-title {
+    margin-top: -60px;
+    font-size: 60px;
+}
+
+.purpose-heading {
+    margin-right: 80px;
+    text-align: right;
+    font-size: 50px;
+}
+
+.about-statment-container {
+    font-size: 18px;
+    margin-left: 70px;
+    margin-right: 80px;
+    line-height: 25px;
+    border-color: #583045;
+    border-width: 4px;
+    border-style: solid;
+    border-top: none;
+    border-right: none;
+    border-bottom: none;
+    padding-left: 30px;
+}
+
+.about-purpose-statment-container {
+    text-align: right;
+    font-size: 18px;
+    margin-left: 70px;
+    margin-right: 80px;
+    line-height: 25px;
+    border-color: #583045;
+    border-width: 4px;
+    border-style: solid;
+    border-top: none;
+    border-left: none;
+    border-bottom: none;
+    padding-right: 30px;
+}
+
+.ethics-heading {
+    margin-left: 65px;
+    text-align: left;
+    font-size: 50px;
+}
+
+.about-ethics-statment-container {
+    text-align: left;
+    font-size: 18px;
+    margin-left: 70px;
+    margin-right: 80px;
+    line-height: 25px;
+    border-color: #583045;
+    border-width: 4px;
+    border-style: solid;
+    border-top: none;
+    border-right: none;
+    border-bottom: none;
+    padding-left: 30px;
+}
+
+.payment-heading {
+    margin-right: 80px;
+    text-align: right;
+    font-size: 50px;
+}
+
+.about-payment-statment-container {
+    text-align: right;
+    font-size: 18px;
+    margin-left: 70px;
+    margin-right: 80px;
+    line-height: 25px;
+    border-color: #583045;
+    border-width: 4px;
+    border-style: solid;
+    border-top: none;
+    border-left: none;
+    border-bottom: none;
+    padding-right: 30px;
 }
 
 body {
