--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -584,3 +584,20 @@ td {
 .initiate-connection-container {
     text-align: center;
 }
+
+.clicked {
+    background-color: white;
+    width: 40px;
+    height: 40px;
+    padding-top: 6px;
+    border: solid #f29475 1px;
+    border-radius: 4px;
+    font-size: 20px;
+    color: #f29475;
+    /* box-shadow: 2px 2px 10px #88888848; */
+    font-family: 'Josefin Sans', sans-serif;
+    margin: 10px;
+    outline: none;
+    border: bottom;
+    cursor: pointer;
+}
