--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -134,37 +134,27 @@ form {
     align-items: center;
 }
 
-.register-container {
+.login-buttons-container, .register-buttons-container, .password-buttons-container {
+    margin: 15px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: center;
+}
+
+.login-container, .password-reset-container, .register-container {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: center;
     background-color: #ffffff;
     box-shadow: 2px 2px 10px #88888888;
-    width: 40%;
-    height: 525px;
+    width: 45%;
+    height: auto;
     margin: 20px auto;
     padding: 25px;
     border-radius: 4px;
     text-align: center;
-}
-
-.login-buttons-container, .register-buttons-container {
-    margin-top: 15px;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-content: center;
-}
-
-.login-container {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-content: center;
-    background-color: #ffffff;
-    box-shadow: 2px 2px 10px #88888888;
-    width: 40%;
-    height: 425px;
-    margin: 20px auto;
-    padding: 25px;
-    border-radius: 4px;
 }
 
 .invalid-password {
@@ -185,7 +175,7 @@ input {
     margin-bottom: 10px;
 }
 
-.log-in, .log-out, .register, .forgot-password {
+.log-in, .log-out, .register, .forgot-password, .reset-password {
     margin-top: 15px;
     font-size: 13px;
     background-color: #f29475;
