--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -514,6 +514,7 @@ tr, td {
 }
 
 .activity-connected-status-modal {
+    margin-top: -15px;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -589,5 +590,20 @@ td {
     margin: 10px;
     outline: none;
     border: bottom;
+    cursor: pointer;
+}
+
+.kickback-sent-button {
+    background-color: #f29475;
+    width: 100px;
+    height: 40px;
+    border-radius: 4px;
+    font-size: 13px;
+    color: #f8f8f8;
+    box-shadow: 2px 2px 10px #88888848;
+    font-family: 'Josefin Sans', sans-serif;
+    padding-top: 4px;
+    outline: none;
+    border: none;
     cursor: pointer;
 }
