--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -348,10 +348,10 @@ h1 {
     box-shadow: 2px 2px 10px #88888848;
     border-radius: 4px;
     border: solid 1.5px #f29475;
-    /* position: absolute;
+    position: absolute;
     right: 8%;
     top: 30%;
-    max-width: 25%; */
+    max-width: 25%;
     padding: 15px;
     text-align: center;
 }
@@ -585,7 +585,7 @@ td {
   }
 
   @media
-only screen and (max-width: 1500px) {
+only screen and (max-width: 500px) {
   table, thead, tbody, th, td, tr {
     display: block;
   }
