--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -36,3 +36,11 @@
   background-color: #c28b75;
   text-align: right;
 }
+
+.logo-title {
+  text-align: left;
+  padding-top: -20px;
+  padding-left: 30px;
+  margin-bottom: -40px;
+  color: white;
+}
