changes background color to tan

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -97,7 +97,7 @@
 }
 
 body {
-    background-color: #eeeeee;
+    background-color: #e6d2ba30;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0px;
     width: 100%;
