remove footer and add google font for subheader

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -38,6 +38,8 @@
 }
 
 .logo-title {
+  font-family: 'Satisfy', cursive;
+  font-size: 22px;
   text-align: left;
   padding-top: -20px;
   padding-left: 30px;
