--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -187,7 +187,7 @@ input {
     cursor: pointer;
 }
 
-.log-in:hover, .log-out:hover, .register:hover {
+.log-in:hover, .log-out:hover, .register:hover, .forgot-password:hover, .reset-password:hover {
     background-color: #c28b75;
 }
 
